# BezierOpenGL

./: CMakeLists.txt  README.md
include/: BezierCurveData.hpp  Camera.hpp  Extrusion.hpp  Mesh.hpp
src/: BezierCurveData.cpp  Camera.cpp  Extrusion.cpp  Mesh.cpp  basic.frag  basic.vert  main.cpp
